Fix alignment of AC button text

--- a/style.css
+++ b/style.css
@@ -76,6 +76,10 @@ button#zero {
   flex: auto;
 }
 
+button#clear {
+  font-size: 24px;
+}
+
 .yellow {
   background-color: gold;
 }
